--- a/style.css
+++ b/style.css
@@ -1,1 +1,185 @@
-style
+*{
+	margin: 0px;
+	padding: 0px;
+	font-family: Times New Roman;
+}
+
+/************************* HEADER *************************/
+
+img {
+    max-width: 100%;
+}
+
+header {
+    box-sizing: border-box;
+    display: block;
+    float: none;
+    position: relative;
+    background-color: rgb(219,48,53);
+    padding-bottom: 10px;
+}
+
+.contenu-header {
+    padding: 0 5px;
+    margin: 0 auto;
+    max-width: 1100px;
+}
+
+#logo-IUT3 {
+    width:65px;
+    margin-top: 5px;
+    margin-left: 5px;
+}
+
+#logo-UT3 {
+    width:220px;
+    margin-left: 10px;
+}
+
+#logo-BUT {
+    float: right;
+	margin-top: 10px;
+	margin-right: 10px;
+    width:110px;
+}
+
+nav{
+    width: 100%;
+    margin: 0 auto;
+    position: sticky;
+    top: 0px;
+    background-color: rgb(235,144,101);
+    margin-top: 10px;
+    border-radius: 10px;
+}
+
+nav ul{
+    list-style-type: none;
+    border-radius: 20px;
+}
+
+nav ul li{
+    float: left;
+    width: 25%;
+    text-align: center;
+    position: relative;
+}
+
+nav ul::after{
+    content: "";
+    display: table;
+    clear: both;
+}
+
+nav a{
+    display: block;
+    text-decoration: none;
+    color: white;
+    border-bottom: 2px solid transparent;
+    padding: 10px 0px;
+}
+
+nav a:hover{
+    color: rgb(243,154,151);
+    border-bottom: 2px solid rgb(243,154,151);
+    background-color: #f2f0f0;
+    border-radius: 10px;
+}
+
+.sous{
+    display: none;
+    box-shadow: 0px 1px 2px #CCC;
+    background-color: rgb(243,154,151);
+    position: absolute;
+    width: 100%;
+    z-index: 1000;
+    opacity: 90%;
+}
+nav > ul li:hover .sous{
+    display: block;
+}
+.sous li{
+    float: none;
+    width: 100%;
+    text-align: left;
+}
+.sous a{
+    padding: 10px;
+    border-bottom: none;
+}
+.sous a:hover{
+    border-bottom: none;
+    background-color: white;
+}
+.deroulant > a::after{
+    content:" ";
+    font-size: 12px;
+}
+
+.contenu{
+  margin: 50px 20px;
+  height: 1500px;
+}
+
+/************************* FOOTER *************************/
+
+footer{
+	box-sizing: border-box;
+	flex-shrink : 0;
+	position: static;
+	display: block;
+	border-top : 1px dashed #000;
+	width: 100%;
+	background-color:rgb(9,11,13);
+}
+
+.contenu-footer {
+	width: 1200px;
+	margin: 0 auto;
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-end;
+	padding: 50px 0 100px;
+}
+
+.plan-site{
+	padding-bottom: 20px;
+	list-style-type: none;
+	text-align: left;
+}
+
+.plan-site li{
+	padding: 2px 0;
+}
+
+.plan-site a{
+	text-decoration: none;
+	color: #f2f0f0;
+	align-items: left;
+}
+
+.plan-site ul{
+	padding: 0 20px;
+}
+
+.partie-RGPD {
+    text-align: center;
+    font-weight: bold;
+	color: #f2f0f0;
+    text-decoration: none;
+    margin: auto;
+    align-self: flex-end;
+}
+
+#logoMJM {
+	display: flex;
+    float: right;
+	margin-bottom: 10px;
+	margin-right: 10px;
+	width:275px;
+	padding-bottom: 60px;
+}
+
+footer a:hover{
+    color: rgb(243,154,151);
+}
