--- a/style.css
+++ b/style.css
@@ -417,7 +417,6 @@ th{
 }
 
 /***************** CONTACT *****************/
-
 .contact input{
     display: flex;
     margin: 0 20px;
@@ -438,7 +437,7 @@ th{
     display:table;
 }
 
-#form1{
+#formulaire{
     display: flex;
     flex-flow: column;
     justify-content: space-between;
@@ -446,9 +445,9 @@ th{
 }
 
 #send {
-    background-color: rgb(255,68,38);
-    color:white;
-    border: none;
+    background-color: rgb(219,48,53);
+    color: #f2f0f0;
+    border-radius: 10px;
     height: 30px;
     width: 200px;
     margin: 10px 165px;
@@ -465,6 +464,7 @@ form div {
 #carte img{
     margin: 20px 0;
 }
+
 
 /************************* FOOTER *************************/
 
